# ncaa_basketball_pipeline

./: .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .prettierignore  .prettierrc.yaml  Makefile  README.md  dagster.yaml  data.sh  pyproject.toml  pyproject.toml.bak  setup.cfg
dlt_sources/: espn_source copy.py  espn_source.py
docs/: api_endpoint_inventory.md  dlt_concurrency_strategy.md  dlt_source_refactor_plan.md  prd.md
docs/discovery/: api_endpoint_inventory.md  discovery_state.json  espn_api_discovery.py
docs/discovery/sample_responses/: awards_-award-id_example.json  awards_example.json  calendar_blacklist_example.json  calendar_example.json  calendar_offdays_example.json  calendar_ondays_example.json  calendar_whitelist_example.json  coaches_-coache-id-_record_-record-id_example.json  coaches_-coache-id_example.json  endpoint_example.json  events_-event-id-_competitions_-competition-id-_broadcasts_example.json  events_-event-id-_competitions_-competition-id-_competitors_-competitor-id-_leaders_example.json  events_-event-id-_competitions_-competition-id-_competitors_-competitor-id-_linescores_-linescore-id-_-1-id_example.json  events_-event-id-_competitions_-competition-id-_odds_-odd-id_example.json  (+75 more)
docs/sample_responses/: event-details_response_20250507103537.json  leaders_response_20250507103537.json  linescores_response_20250507103537.json  list-season-types_response_20250507103536.json  list-week-events_response_20250507103537.json  list-weeks_response_20250507103536.json  odds_response_20250507103538.json  play-by-play_response_20250507103538.json  record_response_20250507103537.json  roster_response_20250507103537.json  score-details_response_20250507103537.json  season-details_response_20250507103536.json  season-specific-team-details_response_20250507103537.json  season-type-details_response_20250507103536.json  situation_response_20250507103538.json  statistics_response_20250507103537.json  status_response_20250507103538.json  venue-details_response_20250507103538.json  week-details_response_20250507103536.json
ncaa_basketball_pipeline/: assets.py  definitions.py
ncaa_basketball_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
notebooks/: 01_espn_api_exploration.ipynb
tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  task_011.txt  task_012.txt  task_013.txt  task_014.txt  task_015.txt  task_016.txt  task_017.txt  task_018.txt  task_019.txt  task_020.txt  task_021.txt  task_022.txt  task_023.txt  task_024.txt  task_025.txt  tasks.json
